--- a/Rec.ipynb
+++ b/Rec.ipynb
@@ -144,12 +144,13 @@
     "    with open(\"predictorstrain.p\",\"rb\") as filehandler:\n",
     "        predictors = pickle.load(filehandler)\n",
     "    for col in tqdm(predictors.keys()):\n",
-    "        not_nan_col_lines = train.loc[train.loc[:,col].isna(), not_nan_cols_dict[col]].dropna()\n",
-    "        if col in list(range(14)):\n",
-    "            train.loc[not_nan_col_lines.index, col] = predictors[col].predict(not_nan_col_lines)\n",
-    "        else:\n",
-    "            for index in tqdm(chunks(not_nan_col_lines.index, 10000 if col in [23] else 1000000)):\n",
-    "                train.loc[index, col] = predictors[col].predict(not_nan_col_lines.loc[index,:].values)\n",
+    "        if col not in [23]:\n",
+    "            not_nan_col_lines = train.loc[train.loc[:,col].isna(), not_nan_cols_dict[col]].dropna()\n",
+    "            if col in list(range(14)):\n",
+    "                train.loc[not_nan_col_lines.index, col] = predictors[col].predict(not_nan_col_lines)\n",
+    "            else:\n",
+    "                for index in tqdm(chunks(not_nan_col_lines.index, 1000000)):\n",
+    "                    train.loc[index, col] = predictors[col].predict(not_nan_col_lines.loc[index,:].values)\n",
     "    print(np.mean((train.count()/len(train)).values), np.mean((test.count()/len(test)).values))\n",
     "    print('Transform')\n",
     "    transformed_test_cols = {x: encode_test_column(x, test) for x in tqdm(test.loc[:, test.columns > 12].columns)}\n",
@@ -180,12 +181,13 @@
     "    with open(\"predictorstest.p\",\"rb\") as filehandler:\n",
     "        predictors = pickle.load(filehandler)\n",
     "    for col in tqdm(predictors.keys()):\n",
-    "        not_nan_col_lines = test.loc[test.loc[:,col].isna(), not_nan_cols_dict[col]].dropna()\n",
-    "        if col in list(range(13)):\n",
-    "            test.loc[not_nan_col_lines.index, col] = predictors[col].predict(not_nan_col_lines)\n",
-    "        else:\n",
-    "            for index in tqdm(chunks(not_nan_col_lines.index, 100000 if col in [14,22] else 1000000)):\n",
-    "                test.loc[index, col] = predictors[col].predict(not_nan_col_lines.loc[index,:].values)\n",
+    "        if col not in [14]:\n",
+    "            not_nan_col_lines = test.loc[test.loc[:,col].isna(), not_nan_cols_dict[col]].dropna()\n",
+    "            if col in list(range(13)):\n",
+    "                test.loc[not_nan_col_lines.index, col] = predictors[col].predict(not_nan_col_lines)\n",
+    "            else:\n",
+    "                for index in tqdm(chunks(not_nan_col_lines.index, 1000000)):\n",
+    "                    test.loc[index, col] = predictors[col].predict(not_nan_col_lines.loc[index,:].values)\n",
     "    print(np.mean((train.count()/len(train)).values), np.mean((test.count()/len(test)).values))\n",
     "    print('filna')\n",
     "    train = train.fillna(0)\n",
